Define a min-width for the title to avoid wrapping it on resize

--- a/ui/static/app.scss
+++ b/ui/static/app.scss
@@ -61,6 +61,7 @@ body {
     a {
         color: #efefef;
         line-height: 50px;
+        min-width: 152px;
         text-decoration: none;
     }
 }
